# packed-data

./: .gitignore  .hlint.yaml  Changelog.md  README.md  package.yaml  packed-data.cabal  packed.cabal  stack.yaml
.github/actions/cache-packed/: action.yml
.github/workflows/: packed.yml
app/: Main.hs
benchmark/: Build.hs  Increment.hs  List.hs  Main.hs  OutputData.hs  Plot.hs  Sum.hs  Utils.hs  benchmark.h
benchmark/ast/: Main.hs
benchmark/bigjson/: Data.hs  Main.hs
benchmark/report/: Criterion.hs  Go.hs  Main.hs  Types.hs
benchmark/report/go/: benchmarks_test.go  go.mod
benchmark/tree/: AST.hs  Build.hs  CIReport.hs  Increment.hs  List.hs  Main.hs  Pack.hs  Sum.hs  Traversals.hs  benchmark.c  benchmark.h
docs/: data.js
examples/: Increment.hs  Pack.hs  Traversal.hs  Tree.hs  Unpack.hs
src/: Tree.hs
src/Data/: Packed.hs
src/Data/Packed/: Case.hs  FieldSize.hs  Instances.hs  Internal.hs  Needs.hs  Packable.hs  Packed.hs  Reader.hs  Skippable.hs  TH.hs  Unpackable.hs  Utils.hs
src/Data/Packed/TH/: Case.hs  Flag.hs  PackCon.hs  Packable.hs  Pattern.hs  Read.hs  RepackCon.hs  Skip.hs  Skippable.hs  Start.hs  Transform.hs  Unpackable.hs  Utils.hs  Write.hs  WriteCon.hs
test/: Spec.hs
test/PackedTest/: CaseTest.hs  Data.hs  IdentityTest.hs  PackTest.hs  UnpackTest.hs
