cabal-version:      2.2
name:               packed
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2025 Arthi-chaud
maintainer:         aj530@kent.ac.uk
author:             Arthi-chaud
homepage:           https://github.com/Arthi-chaud/packed-haskell#readme
bug-reports:        https://github.com/Arthi-chaud/packed-haskell/issues
description:        Build, traverse and deserialise packed data in Haskell
build-type:         Simple
extra-source-files: README.md

source-repository head
    type:     git
    location: https://github.com/Arthi-chaud/packed-haskell

library
    exposed-modules:
        Data.Packed
        Data.Packed.Reader
        Data.Packed.Needs
        Data.Packed.Instances
        Data.Packed.TH
        Data.Packed.Skippable

    hs-source-dirs:     src
    other-modules:
        Data.Packed.FieldSize
        Data.Packed.Packable
        Data.Packed.Packed
        Data.Packed.TH.Case
        Data.Packed.TH.Flag
        Data.Packed.TH.Packable
        Data.Packed.TH.PackCon
        Data.Packed.TH.Read
        Data.Packed.TH.RepackCon
        Data.Packed.TH.Skip
        Data.Packed.TH.Skippable
        Data.Packed.TH.Start
        Data.Packed.TH.Transform
        Data.Packed.TH.Unpackable
        Data.Packed.TH.Utils
        Data.Packed.TH.Write
        Data.Packed.TH.WriteCon
        Data.Packed.Unpackable
        Data.Packed.Utils
        Tree
        Paths_packed

    autogen-modules:    Paths_packed
    default-language:   Haskell2010
    default-extensions:
        DataKinds TypeOperators KindSignatures GADTs LambdaCase
        TemplateHaskell TemplateHaskellQuotes TupleSections QualifiedDo

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    build-depends:
        base >=4.7 && <5,
        bytestring >=0.12.1.0 && <0.13,
        bytestring-strict-builder,
        deepseq >=1.5.0.0 && <1.6,
        extra,
        mtl >=2.3.1 && <2.4,
        template-haskell >=2.22.0.0 && <2.23

executable packed-exe
    main-is:            Main.hs
    hs-source-dirs:     app
    other-modules:      Paths_packed
    autogen-modules:    Paths_packed
    default-language:   Haskell2010
    default-extensions:
        DataKinds TypeOperators KindSignatures GADTs LambdaCase
        TemplateHaskell TemplateHaskellQuotes TupleSections QualifiedDo

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.7 && <5,
        deepseq >=1.5.0.0 && <1.6,
        mtl >=2.3.1 && <2.4,
        packed,
        time >=1.12.2 && <1.13

test-suite packed-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    other-modules:
        PackedTest.CaseTest
        PackedTest.Data
        PackedTest.IdentityTest
        PackedTest.PackTest
        PackedTest.UnpackTest
        Paths_packed

    autogen-modules:    Paths_packed
    default-language:   Haskell2010
    default-extensions:
        DataKinds TypeOperators KindSignatures GADTs LambdaCase
        TemplateHaskell TemplateHaskellQuotes TupleSections QualifiedDo

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-N -Wno-unused-top-binds
        -Wno-orphans -Wno-redundant-constraints

    build-depends:
        base >=4.7 && <5,
        bytestring >=0.12.1.0 && <0.13,
        bytestring-strict-builder,
        hspec,
        packed

benchmark ast-bench
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     benchmark/ast
    other-modules:      Paths_packed
    autogen-modules:    Paths_packed
    default-language:   Haskell2010
    default-extensions:
        DataKinds TypeOperators KindSignatures GADTs LambdaCase
        TemplateHaskell TemplateHaskellQuotes TupleSections QualifiedDo

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-T -O2 -Wno-unused-top-binds
        -Wno-orphans -Wno-redundant-constraints

    build-depends:
        base >=4.7 && <5,
        criterion,
        optparse-applicative,
        packed

benchmark bigjson-bench
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     benchmark/bigjson
    other-modules:
        Data
        Paths_packed

    autogen-modules:    Paths_packed
    default-language:   Haskell2010
    default-extensions:
        DataKinds TypeOperators KindSignatures GADTs LambdaCase
        TemplateHaskell TemplateHaskellQuotes TupleSections QualifiedDo

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-T -O2 -Wno-unused-top-binds
        -Wno-orphans -Wno-redundant-constraints

    build-depends:
        aeson,
        base >=4.7 && <5,
        bytestring >=0.12.1.0 && <0.13,
        criterion,
        directory >=1.3.8.3 && <1.4,
        optparse-applicative,
        packed

benchmark packed-bench
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    cc-options:         -O2
    c-sources:          benchmark/benchmark.c
    hs-source-dirs:     benchmark
    other-modules:
        AST
        Build
        CIReport
        Increment
        List
        OutputData
        Pack
        Plot
        Sum
        Traversals
        Utils
        Paths_packed

    autogen-modules:    Paths_packed
    default-language:   Haskell2010
    default-extensions:
        DataKinds TypeOperators KindSignatures GADTs LambdaCase
        TemplateHaskell TemplateHaskellQuotes TupleSections QualifiedDo

    include-dirs:       benchmark
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -threaded -rtsopts -with-rtsopts=-T -O2 -Wno-unused-top-binds
        -Wno-orphans -Wno-redundant-constraints

    build-depends:
        Chart,
        Chart-diagrams,
        aeson,
        base >=4.7 && <5,
        bytestring >=0.12.1.0 && <0.13,
        cassava,
        criterion,
        deepseq >=1.5.0.0 && <1.6,
        directory >=1.3.8.3 && <1.4,
        filepath >=1.5.2.0 && <1.6,
        listsafe,
        mtl >=2.3.1 && <2.4,
        optparse-applicative,
        packed,
        split,
        vector
